--- a/src/components/Form/EditForm/index.less
+++ b/src/components/Form/EditForm/index.less
@@ -3,6 +3,7 @@
 .grid_name {
   height: 40px;
   line-height: 40px;
+  text-align: center;
   .grid-title-text();
   font-weight: bold;
 }
@@ -26,17 +27,18 @@
 }
 
 .grid_add {
-  height: 75px;
-  padding-top: 10px;
+  height: 32px;
+  // padding-top: 10px;
   text-align: center;
-  border: 1px solid #ccc;
-  .btn {
-    margin: 0 auto;
-    width: 150px;
-    height: 40px;
-    border: 1px solid #ccc;
-    line-height: 40px;
-    background: url('/add.png') no-repeat center center;
-    background-size: 16px;
-  }
+  border: 1px dotted #ccc;
+  background: url('/add.png') no-repeat center center;
+  background-size: 14px;
+  // .btn {
+  //   margin: 0 auto;
+  //   width: 150px;
+  //   height: 40px;
+  //   border: 1px solid #ccc;
+  //   line-height: 40px;
+
+  // }
 }
