--- a/src/components/Form/InterfaceItem/index.less
+++ b/src/components/Form/InterfaceItem/index.less
@@ -6,7 +6,7 @@
     }
 
     .ant-select {
-      line-height: 38px;
+      line-height: 30px;
       height: 38px;
       width: 100%;
     }
@@ -14,9 +14,9 @@
       height: 100%;
       border-color: transparent;
     }
-    .ant-select-selection__rendered {
-      line-height: 36px;
-    }
+    // .ant-select-selection__rendered {
+    //   line-height: px;
+    // }
   }
 }
 
@@ -27,15 +27,15 @@
       border-color: transparent;
     }
     .ant-select-selection--multiple {
-      min-height: 38px;
+      min-height: 30px;
     }
     .ant-select {
-      line-height: 38px;
+      line-height: 30px;
       width: 100%;
     }
     .ant-select-selection--multiple .ant-select-selection__rendered > ul > li {
-      height: 30px;
-      line-height: 30px;
+      height: 24px;
+      line-height: 24px;
     }
   }
 }
