--- a/src/components/Form/UploadItem/index.less
+++ b/src/components/Form/UploadItem/index.less
@@ -1,7 +1,7 @@
 @import '../../../utils/utils.less';
 .file {
   height: auto;
-  min-height: 150px;
+  min-height: 92px;
 }
 
 .errorMsg {
@@ -9,19 +9,20 @@
 }
 
 .upfile {
+  margin: 0 -11px;
   :global {
     .ant-upload.ant-upload-select-picture-card {
       float: left;
-      height: 103px;
-      width: 103px;
-      margin-right: 5px;
-      margin-bottom: 10px;
+      height: 80px;
+      width: 80px;
+      // margin-right: 40px;
+      margin: 0 20px 5px 20px;
     }
     .ant-upload-list-picture-card .ant-upload-list-item {
-      height: 103px;
-      width: 103px;
-      margin-right: 5px;
-      margin-bottom: 10px;
+      height: 80px;
+      width: 80px;
+      margin: 0 20px;
+      margin-bottom: 5px;
     }
     .ant-upload-list-picture-card {
       float: none;
