--- a/src/components/UploadCropper/index.less
+++ b/src/components/UploadCropper/index.less
@@ -4,13 +4,8 @@
 }
 
 .ant-upload-select-picture-card .ant-upload-text {
-  margin-top: 8px;
   color: #666;
-}
-
-.ant_upload_text {
-  margin-top: 10px;
-  color: #666;
+  font-size: 12px;
 }
 
 .upload {
@@ -24,10 +19,6 @@
     .ant-upload-select-picture-card {
       background: #fff;
     }
-    .ant-upload-select-picture-card .ant_upload_text {
-      margin-top: 10px;
-      color: #666;
-    }
     .ant-upload-select-picture-card i {
       font-size: 32px;
       color: #999;
@@ -37,8 +28,8 @@
     }
   }
   .ant_upload_text {
-    margin-top: 10px;
     color: #666;
+    font-size: 12px;
   }
 }
 
