--- a/src/global.less
+++ b/src/global.less
@@ -38,12 +38,14 @@ ol {
 
 ::-webkit-scrollbar {
   width: 4px;
-  height: 4px;
+  position: absolute;
+  right: -4px;
 }
 
 ::-webkit-scrollbar-thumb {
   background-color: #1890ff;
 }
+
 ::-webkit-scrollbar-track {
   // background-color: rgba(0,0,0,0);
 }
