--- a/src/components/Form/AddressItem/index.less
+++ b/src/components/Form/AddressItem/index.less
@@ -6,6 +6,10 @@
     }
     .ant-select-selection {
       height: 28px;
+      border: 1px solid #d9d9d9;
+      &:hover {
+        border-color: @primary-color;
+      }
     }
     .ant-form-item-children {
       display: flex;
