--- a/src/components/Form/UploadItem/index.less
+++ b/src/components/Form/UploadItem/index.less
@@ -9,19 +9,19 @@
 }
 
 .upfile {
-  margin: 0 -11px;
+  // margin: 0 -11px;
   :global {
     .ant-upload.ant-upload-select-picture-card {
       float: left;
       height: 80px;
       width: 80px;
       // margin-right: 40px;
-      margin: 0 20px 5px 20px;
+      margin: 0 15px 5px 15px;
     }
     .ant-upload-list-picture-card .ant-upload-list-item {
       height: 80px;
       width: 80px;
-      margin: 0 20px;
+      margin: 0 15px;
       margin-bottom: 5px;
     }
     .ant-upload-list-picture-card {
