--- a/src/components/SelectShop/index.less
+++ b/src/components/SelectShop/index.less
@@ -2,12 +2,18 @@
 
 .result {
   height: 100%;
+  position: relative;
   // min-height: 40px;
   // border: 1px solid #d9d9d9;
   padding-left: 3px; // padding-bottom: 3px;
   // &:hover {
   //   border: 1px solid @primary-color;
   // }
+}
+.placeholder {
+  position: absolute;
+  top: 0;
+  color: #999;
 }
 
 .single_search {
