--- a/src/components/SelectStaff/index.less
+++ b/src/components/SelectStaff/index.less
@@ -2,10 +2,16 @@
 .result {
   // min-height: 40px;
   height: 100%;
+  position: relative;
+
   // border: 1px solid #d9d9d9;
   padding-left: 3px; // padding-bottom: 3px;
 }
-
+.placeholder {
+  position: absolute;
+  top: 0;
+  color: #999;
+}
 .single_result {
   // margin-right: 37px;
   // border-right: 1px solid #ccc;
