--- a/src/pages/Flows/index.less
+++ b/src/pages/Flows/index.less
@@ -91,6 +91,9 @@
     border: 1px solid #ccc;
     margin-bottom: 20px;
     position: relative;
+    &:hover {
+      border-color: @primary-color;
+    }
     .icon {
       position: absolute;
       width: 30px;
