--- a/src/components/Form/detail.less
+++ b/src/components/Form/detail.less
@@ -2,7 +2,7 @@
 .form_item {
   padding-right: 20px;
   // width: 300px;
-  min-width: 300px;
+  // min-width: 300px;
   max-width: 900px;
   display: flex;
   min-height: 40px;
@@ -23,7 +23,7 @@
   }
   .right {
     flex-grow: 1;
-    min-width: 160px;
+    // min-width: 160px;
     padding: 5px 0;
     line-height: 20px;
     color: #666;
