--- a/src/global.less
+++ b/src/global.less
@@ -25,7 +25,9 @@ body {
 * {
   box-sizing: border-box;
 }
-
+p {
+  margin: 0;
+}
 .globalSpin {
   width: 100%;
   margin: 40px 0 !important;
@@ -38,6 +40,7 @@ ol {
 
 ::-webkit-scrollbar {
   width: 4px;
+  height: 4px;
   position: absolute;
   right: -4px;
 }
