--- a/src/components/SelectShop/index.less
+++ b/src/components/SelectShop/index.less
@@ -13,7 +13,10 @@
 .placeholder {
   position: absolute;
   top: 0;
-  color: #999;
+  left: 10px;
+  color: #bfbfbf;
+  height: 30px;
+  line-height: 30px;
 }
 
 .single_search {
