--- a/src/components/SelectStaff/index.less
+++ b/src/components/SelectStaff/index.less
@@ -10,7 +10,10 @@
 .placeholder {
   position: absolute;
   top: 0;
-  color: #999;
+  left: 10px;
+  height: 30px;
+  line-height: 30px;
+  color: #bfbfbf;
 }
 .single_result {
   // margin-right: 37px;
