--- a/src/components/Form/index.less
+++ b/src/components/Form/index.less
@@ -147,6 +147,12 @@
         border: none;
         min-height: auto;
       }
+      .ant-select-focused .ant-select-selection,
+      .ant-select-selection:focus,
+      .ant-select-selection:active {
+        border-color: transparent;
+        box-shadow: none;
+      }
       .ant-select-selection.ant-select-selection--single {
         background: url('/drop_down.png') no-repeat right center;
         background-size: 16px 16px;
