模板，分组高度与隐藏处理

--- a/src/components/Form/EditForm/index.less
+++ b/src/components/Form/EditForm/index.less
@@ -7,6 +7,10 @@
   .grid-title-text();
   font-weight: bold;
 }
+.grid_error {
+  .error-text();
+  font-weight: normal;
+}
 
 .grid_content {
   padding: 25px 0 10px;
@@ -33,6 +37,7 @@
   border: 1px dotted #ccc;
   background: url('/add.png') no-repeat center center;
   background-size: 14px;
+  margin: 9px 0;
   // .btn {
   //   margin: 0 auto;
   //   width: 150px;
