--- a/src/components/Form/UploadItem/index.less
+++ b/src/components/Form/UploadItem/index.less
@@ -14,8 +14,7 @@
     .ant-upload.ant-upload-select-picture-card {
       float: left;
       height: 80px;
-      width: 80px;
-      // margin-right: 40px;
+      width: 80px; // margin-right: 40px;
       margin: 0 15px 5px 15px;
     }
     .ant-upload-list-picture-card .ant-upload-list-item {
@@ -44,13 +43,13 @@
       height: 60px;
       width: 60px;
       margin-right: 10px;
-      margin-bottom: 10px; // margin-top: 10px;
+      margin-bottom: 5px; // margin-top: 10px;
     }
     .ant-upload-list-picture-card .ant-upload-list-item {
       height: 60px;
       width: 60px;
       margin-right: 10px;
-      margin-bottom: 10px; // margin-top: 10px;
+      margin-bottom: 5px; // margin-top: 10px;
     }
     .ant-upload-list-picture-card {
       float: none;
