--- a/src/components/SelectShop/ShopModal/index.less
+++ b/src/components/SelectShop/ShopModal/index.less
@@ -308,7 +308,6 @@
 //   height: 4px;
 //   background-color: #1890ff;
 // }
-
 .delete {
   width: 20px;
   float: left;
@@ -394,8 +393,9 @@
 }
 
 .page {
-  // width: 320px;
   width: auto;
+  max-width: 460px;
+  overflow: scroll hidden;
   height: 40px;
   float: right;
   padding-top: 15px;
