--- a/src/components/SelectStaff/StaffModal/index.less
+++ b/src/components/SelectStaff/StaffModal/index.less
@@ -391,11 +391,12 @@
 }
 
 .page {
-  // width: 320px;
   width: auto;
+  max-width: 460px;
+  overflow: scroll hidden;
   height: 40px;
   float: right;
-  padding-top: 10px;
+  padding-top: 15px;
   :global(.ant-pagination-item-active) {
     border-color: transparent;
   }
