--- a/src/pages/Flows/index.less
+++ b/src/pages/Flows/index.less
@@ -91,6 +91,7 @@
     border: 1px solid #ccc;
     margin-bottom: 20px;
     position: relative;
+    cursor: pointer;
     &:hover {
       border-color: @primary-color;
     }
