--- a/src/components/Form/DepItem/index.less
+++ b/src/components/Form/DepItem/index.less
@@ -10,9 +10,9 @@
 // }
 .select {
   :global {
-    .ant-select-selection__placeholder {
-      margin-top: -9px;
-    }
+    // .ant-select-selection__placeholder {
+    //   margin-top: -9px;
+    // }
 
     .ant-form-item-control {
       line-height: 30px;
@@ -43,9 +43,9 @@
       min-height: 30px;
     }
 
-    .ant-select-selection__placeholder {
-      margin-top: -9px;
-    }
+    // .ant-select-selection__placeholder {
+    //   margin-top: -9px;
+    // }
     .ant-select-selection {
       border-color: transparent;
     }
