--- a/src/components/SelectStaff/StaffModal/index.less
+++ b/src/components/SelectStaff/StaffModal/index.less
@@ -131,6 +131,23 @@
   }
 }
 
+.history {
+  // height: 45px;
+  padding: 10px 0 15px 0;
+  .clearfix();
+  .his_item {
+    float: left;
+    height: 20px;
+    line-height: 20px;
+    font-size: 12px;
+    color: #999;
+    text-align: center;
+    padding: 0 6px;
+    background: #eee;
+    margin-right: 5px;
+    cursor: pointer;
+  }
+}
 .type_list {
   position: absolute;
   background: #fff;
