--- a/src/components/SelectShop/ShopModal/index.less
+++ b/src/components/SelectShop/ShopModal/index.less
@@ -155,6 +155,7 @@
   padding-top: 20px;
   float: right;
   width: 294px;
+
   height: 100%;
   .clearfix();
 }
@@ -388,10 +389,32 @@
 }
 
 .search_result {
-  height: 240px;
+  height: 245px;
   padding-top: 16px;
 }
-
+.history {
+  // height: 45px;
+  padding: 10px 0 15px 0;
+  font-size: 12px;
+  .clearfix();
+  .his_title {
+    float: left;
+    margin-bottom: 5px;
+    margin-right: 10px;
+  }
+  .his_item {
+    float: left;
+    height: 20px;
+    line-height: 18px;
+    border: 1px solid #ccc;
+    color: #999;
+    text-align: center;
+    padding: 0 6px;
+    margin-right: 5px;
+    cursor: pointer;
+    margin-bottom: 5px;
+  }
+}
 .page {
   width: auto;
   max-width: 460px;
