--- a/src/components/SelectStaff/StaffModal/index.less
+++ b/src/components/SelectStaff/StaffModal/index.less
@@ -132,20 +132,25 @@
 }
 
 .history {
-  // height: 45px;
   padding: 10px 0 15px 0;
+  font-size: 12px;
   .clearfix();
+  .his_title {
+    float: left;
+    margin-bottom: 5px;
+    margin-right: 10px;
+  }
   .his_item {
     float: left;
     height: 20px;
-    line-height: 20px;
-    font-size: 12px;
+    line-height: 18px;
+    border: 1px solid #ccc;
     color: #999;
     text-align: center;
     padding: 0 6px;
-    background: #eee;
     margin-right: 5px;
     cursor: pointer;
+    margin-bottom: 5px;
   }
 }
 .type_list {
@@ -202,7 +207,7 @@
     float: right;
     color: #333;
     font-size: 12px;
-    line-height: 20px;
+    line-height: 18px;
     height: 20px;
     margin-left: 20px;
     cursor: pointer;
@@ -403,7 +408,7 @@
 }
 
 .search_result {
-  height: 240px;
+  height: 245px;
   padding-top: 16px;
 }
 
