--- a/src/components/Form/detail.less
+++ b/src/components/Form/detail.less
@@ -3,7 +3,7 @@
   padding-right: 20px;
   // width: 300px;
   // min-width: 300px;
-  max-width: 900px;
+  // max-width: 900px;
   display: flex;
   min-height: 40px;
   flex-direction: column;
