--- a/src/components/Form/FormDetail/index.less
+++ b/src/components/Form/FormDetail/index.less
@@ -8,17 +8,17 @@
 }
 
 .grid_content {
-  padding: 25px 0 10px;
-  border: 1px solid #ccc;
+  padding: 20px 0 10px;
+  border-bottom: 1px solid #ccc;
   border-top: none;
   &:first-child {
     border-top: 1px solid #ccc;
   }
   > span {
-    width: 25px;
-    height: 25px;
+    width: 20px;
+    height: 20px;
     background: url('/delete.png') no-repeat center center;
-    background-size: 16px 16px;
+    background-size: 14px 14px;
     float: right;
     margin-top: -20px;
     margin-right: 10px;
