--- a/src/components/Form/index.less
+++ b/src/components/Form/index.less
@@ -144,6 +144,12 @@
       box-shadow: 0 0 4px rgba(0, 0, 0, 0.1);
     }
     :global {
+      .ant-select-selection--multiple .ant-select-search--inline .ant-select-search__field {
+        width: 100%;
+      }
+      .ant-select-search.ant-select-search--inline {
+        width: 100%;
+      }
       .ant-select-selection.ant-select-selection--multiple {
         border: none;
         min-height: auto;
