--- a/src/components/TagGroup/index.less
+++ b/src/components/TagGroup/index.less
@@ -30,12 +30,13 @@
   }
   span {
     position: absolute;
-    right: 11px;
+    right: 0px;
     top: 0;
     width: 30px;
     height: 22px;
-    background: url(/delete.png) no-repeat right center;
+    background: url(/delete.png) no-repeat center center;
     background-size: 10px;
+    cursor: pointer;
   }
 }
 
