默认值为本人

--- a/src/pages/Flows/index.less
+++ b/src/pages/Flows/index.less
@@ -46,10 +46,11 @@
     padding: 18px 12px;
     cursor: pointer;
     .name {
-      font-size: 18px;
+      font-size: 14px;
       color: #333;
-      line-height: 24px;
-      height: 24px;
+      line-height: 20px;
+      height: 20px;
+      .textOverflow();
     }
     .des {
       font-size: 12px;
