--- a/src/components/Form/AddressItem/index.less
+++ b/src/components/Form/AddressItem/index.less
@@ -1,7 +1,10 @@
 @import '../../../utils/utils.less';
 .address {
   :global {
-    .ant-select-disabled .ant-select-selection:hover {
+    .ant-input-group.ant-input-group-compact > *:first-child,
+    .ant-input-group.ant-input-group-compact > .ant-select:first-child > .ant-select-selection,
+    .ant-input-group.ant-input-group-compact > .ant-select:last-child > .ant-select-selection,
+    .ant-input-group.ant-input-group-compact > *:last-child {
       border-color: #d9d9d9;
     }
     .ant-select-selection {
