--- a/src/components/Form/AddressItem/index.less
+++ b/src/components/Form/AddressItem/index.less
@@ -5,6 +5,10 @@
     .ant-input-group.ant-input-group-compact > .ant-select:first-child > .ant-select-selection,
     .ant-input-group.ant-input-group-compact > .ant-select:last-child > .ant-select-selection,
     .ant-input-group.ant-input-group-compact > *:last-child {
+      border-top-left-radius: 0;
+      border-bottom-left-radius: 0;
+    }
+    .ant-select-disabled .ant-select-selection:hover {
       border-color: #d9d9d9;
     }
     .ant-select-selection {
