--- a/src/components/Form/AddressItem/index.less
+++ b/src/components/Form/AddressItem/index.less
@@ -7,6 +7,11 @@
     .ant-input-group.ant-input-group-compact > *:last-child {
       border-top-left-radius: 0;
       border-bottom-left-radius: 0;
+      border-top-right-radius: 0;
+      border-bottom-right-radius: 0;
+    }
+    .ant-input {
+      border-radius: 0;
     }
     .ant-select-disabled .ant-select-selection:hover {
       border-color: #d9d9d9;
