--- a/src/components/Form/index.less
+++ b/src/components/Form/index.less
@@ -14,6 +14,9 @@
     }
   }
   :global {
+    .ant-select-selection--multiple .ant-select-selection__choice {
+      border-radius: 0;
+    }
     .ant-time-picker-input[disabled]:hover {
       border-color: transparent;
     }
